--- a/indext.html
+++ b/indext.html
@@ -52,7 +52,7 @@
         </header>
 
         <div class="banner">
-            <div class="container">
+            <div class="container reveral">
                 <h1>Giao Tiếp Tiếng Anh Trôi Chảy <br>
                     Chỉ Sau 3 Tháng Tự Học</h1>
                 <p><span>567.300</span> Học Viên Khắp Đông Nam Á Đã Thành Công Với Khóa Học Tiếng Anh Eng Breaking</p>
@@ -62,13 +62,13 @@
                     <li><i class="fa-solid fa-check"></i> Tiếng Anh giúp bạn có thêm cơ hội học tập tại những trường tốt
                         nhất trên thế giới </li>
                 </ul>
-                <a href="#"><button class="cta">Đăng Kí Ngay</button></a>
+                <a href="#atc"><button class="cta">Đăng Kí Ngay</button></a>
             </div>
         </div>
     </div>
 
     <div id="review" class="review">
-        <div class="container">
+        <div class="container reveral">
             <div class="left">
                 <h2>Giới Thiệu Về Eng Breaking</h2>
                 <p><span>Eng Breaking</span> là một trong những phương pháp tự học tiếng Anh mới vừa xuất hiện trên thị
@@ -94,7 +94,7 @@
     </div>
 
     <div id="method" class="method">
-        <div class="container">
+        <div class="container reveral">
             <div class="left">
                 <img src="./assets/img/method.jpg" alt="">
             </div>
@@ -119,7 +119,7 @@
     </div>
 
     <div id="blog" class="blog">
-        <div class="container">
+        <div class="container reveral">
             <div class="card">
                 <img src="./assets/img/Hường.jpg" alt="" class="top">
                 <div class="content">
@@ -165,7 +165,7 @@
                 <img src="./assets/img/moblie.png" alt="">
             </div>
         </div>
-        <div class="container">
+        <div class="container reveral">
             <div class="bottom">
                 <h2>Tính Năng Nổi Bật</h2>
                 <div class="cards">
@@ -194,8 +194,8 @@
         </div>
     </div>
 
-    <div class="sigin">
-        <div class="container">
+    <div id="atc" class="sigin">
+        <div class="container reveral">
             <h2>Đăng Kí Ngay Để Nhận Ưu Đãi</h2>
             <form action="#">
                 <input type="email" placeholder="Nhập email của bạn tại đây">
@@ -205,7 +205,7 @@
     </div>
 
     <footer>
-        <div class="container">
+        <div class="container reveral">
             <div class="left">
                 <img src="./assets/img/Logo.png" alt="" class="logo">
                 <ul>
