--- a/indext.html
+++ b/indext.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="./assets/font/fontawesome-free-6.4.0-web/css/all.min.css">
     <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Document</title>
+    <link rel="shortcut icon" href="./assets/img/Logo.png">
+    <title>EngBreaking</title>
 </head>
 
 <body>
