--- a/indext.html
+++ b/indext.html
@@ -199,7 +199,9 @@
         <div class="container reveral">
             <h2>Đăng Kí Ngay Để Nhận Ưu Đãi</h2>
             <form action="#">
+                <input type="text" placeholder="Nhập tên đăng nhập">
                 <input type="email" placeholder="Nhập email của bạn tại đây">
+                <input type="tel" placeholder="Nhập số điện thoại">
                 <button>Đăng Kí</button>
             </form>
         </div>
