--- a/indext.html
+++ b/indext.html
@@ -53,7 +53,7 @@
         </header>
 
         <div class="banner">
-            <div class="container reveral">
+            <div class="container ">
                 <h1>Giao Tiếp Tiếng Anh Trôi Chảy <br>
                     Chỉ Sau 3 Tháng Tự Học</h1>
                 <p><span>567.300</span> Học Viên Khắp Đông Nam Á Đã Thành Công Với Khóa Học Tiếng Anh Eng Breaking</p>
